[package]
name = "metallicalc"
description = "A calculator written in Rust"
version = "1.0.0"
edition = "2018"
license = "MIT"
license-file = "./LICENSE"
documentation = "https://github.com/acikek/metallicalc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]